<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_Event" Id="{d479932f-3152-0429-3151-e64105f27552}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_Event :
(
	Verbose			:= 0,
	Debug			:= 1,
	Information		:= 2,
	Warning			:= 3,
	Error			:= 4
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>