<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_Event" Id="{424f55e5-b514-4649-8354-f5dfeb5cecd2}">
    <Declaration><![CDATA[TYPE ST_Event :
STRUCT
	Source:			I_Component;
	EventType:		E_Event;
	Timestamp:   	ULINT;
	ID:				UDINT;
	Message:		STRING(255);
	Arguments:		STRING(255);
	Active:		BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>