<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_Event" Id="{59616103-7f2e-4b6f-81bd-583969a36d28}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Event EXTENDS FB_ListString IMPLEMENTS I_Event
VAR_INPUT
	bIngoreHold:			BOOL:= TRUE;
	bIngorePause:			BOOL:= TRUE;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	iParent:			I_Component;
	iLogger:			I_Logger;
	stEvent:			ST_Event;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[SUPER^();]]></ST>
    </Implementation>
    <Method Name="FB_init" Id="{be23ffcc-529d-4010-ace3-b17baed191a5}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
	iParent:			I_Component;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.iParent:= iParent;]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Arguments" Id="{70779266-7b36-4bce-9e6f-049e951fd75a}">
      <Declaration><![CDATA[METHOD INTERNAL M_Arguments : STRING(255)
VAR_INPUT
END_VAR
VAR
	nIndex:			INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[WHILE nIndex < nLength DO
	M_Arguments:= Concat(Concat(M_Arguments, pList[nIndex]), '$N');
	nIndex:= nIndex + 1;
END_WHILE]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Debug" Id="{0a2b992b-2a4a-0251-0210-713b326debf6}">
      <Declaration><![CDATA[METHOD PUBLIC M_Debug : BOOL
VAR_INPUT
	Message:				STRING(255);
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Error" Id="{55348828-4763-4c06-9dd1-090fa29a8379}">
      <Declaration><![CDATA[METHOD PUBLIC M_Error : BOOL
VAR_INPUT
	Message:				STRING(255);
	ID:						UDINT;
	Behaviour:				E_Behaviour;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[stEvent.Source:= iParent;
stEvent.EventType:= E_Event.Error;
stEvent.Timestamp:= F_GetSystemTime();
stEvent.ID:= ID;
stEvent.Message:= Message;
stEvent.Arguments:= M_Arguments();
stEvent.Active:= TRUE;

IF Behaviour >= E_Behaviour.Abort THEN
	iParent.M_Request(E_Request.Abort);
ELSIF Behaviour >= E_Behaviour.Stop THEN
	iParent.M_Request(E_Request.Stop);
ELSIF Behaviour >= E_Behaviour.Complete THEN	
	iParent.M_Request(E_Request.Complete);
ELSIF Behaviour >= E_Behaviour.Hold THEN
	iParent.M_Request(E_Request.Hold);
ELSIF Behaviour >= E_Behaviour.Pause THEN
	iParent.M_Request(E_Request.Pause);
END_IF

IF iLogger <> 0 THEN
	iLogger.M_Log(stEvent);
END_IF

M_Clear();]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Information" Id="{d9a244f2-1d6f-434f-aab4-cad6aacbb94f}">
      <Declaration><![CDATA[METHOD PUBLIC M_Information : BOOL
VAR_INPUT
	Message:				STRING(255);
	ID:						UDINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Warning" Id="{d443b8bb-774e-487e-80a2-79cf66a0376c}">
      <Declaration><![CDATA[METHOD PUBLIC M_Warning : BOOL
VAR_INPUT
	Message:				STRING(255);
	ID:						UDINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Property Name="P_Logger" Id="{642d0edf-ded0-4248-be29-8384d3180124}">
      <Declaration><![CDATA[PROPERTY PUBLIC P_Logger : I_Logger]]></Declaration>
      <Get Name="Get" Id="{99e41819-eb78-4b29-b3e9-6728532b14b1}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[P_Logger:= iLogger;]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{be31597a-6e88-476b-aec8-980317d6bc1a}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[iLogger:= P_Logger;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <LineIds Name="FB_Event">
      <LineId Id="68" Count="0" />
    </LineIds>
    <LineIds Name="FB_Event.FB_init">
      <LineId Id="7" Count="0" />
    </LineIds>
    <LineIds Name="FB_Event.M_Arguments">
      <LineId Id="5" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="10" Count="0" />
    </LineIds>
    <LineIds Name="FB_Event.M_Debug">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Event.M_Error">
      <LineId Id="129" Count="23" />
      <LineId Id="62" Count="0" />
    </LineIds>
    <LineIds Name="FB_Event.M_Information">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Event.M_Warning">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Event.P_Logger.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Event.P_Logger.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>